Agenda Alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -1047,8 +1047,6 @@ nav.navbar {
 }
 
 .language-indicate {
-    margin-right: -15px;
-    margin-left: -15px;
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 15px;
